==================================================================
User visible changes for UPX
==================================================================

Changes in 3.05 (27 Apr 2010):
  * i386-linux and amd64-linux support shared libraries (DT_INIT must
    exist, all info needed by runtime loader must be first in .text, etc.)
  * Linux /proc/self/exe now is preserved by default, by leaving behind
    one page.  New compress-time option --unmap-all-pages is available.
  * bug fixes

Changes in 3.04 (27 Sep 2009):
  * new format Mach/AMD64 supports 64-bit programs on Apple Macintosh.
  * new formats Dylib/i386 and Dylib/ppc32 support shared libraries
    [such as browser plugins] on Darwin (Apple Macintosh).  An existing
    -init function (LC_ROUTINES command) is required.
  * new format vmlinuz/armel for Debian NSLU2 (etc.) linux kernel
  * bvmlinuz boot protocol 2.08 for 386 Linux kernel
  * Extended ABI version 4 for armel-eabi ARM Linux ELF
  * bug fixes

Changes in 3.03 (27 Apr 2008):
  * implement cache flushing for PowerPC (esp. model 440)
  * fix cache flushing on MIPS (>3 MiB compressed, or with holes)
  * fix MIPS big-endian
  * bug fixes

Changes in 3.02 (16 Dec 2007):
  * fix unmapping on arm-linux.elf
  * fix error checking in mmap for i386-linux.elf [triggered by -fPIE]
  * bug fixes

Changes in 3.01 (31 Jul 2007):
  * new options --no-mode, --no-owner and --no-time to disable preservation
    of mode (file permissions), file ownership and timestamps.
  * dos/exe: fixed an incorrect error message caused by a bug in
    relocation handling
  * new format linux/mipsel supports ELF on [32-bit] R3000
  * fix argv[0] on PowerPC with --lzma
  * bug fixes

Changes in 3.00 (27 Apr 2007):
  * watcom/le & tmt/adam: fixed a problem when using certain filters

Changes in 2.93 beta (08 Mar 2007):
  * new formats Mach/i386 and Mach/fat support Mac OS X i686 and
    Universal binaries [i686 and PowerPC only]